--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 glam = "0.25.0"
+rand = "0.8.5"
 softbuffer = "0.4.1"
 tobj = "4.0.0"
 winit = "0.29.10"
